# fincli-bootcamp2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fincli/: adapters.py  cli.py  models.py  repository.py  services.py
tests/: test_finance.py  test_integracao.py  test_integração.py
